# QuickDesk

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: docker-publish.yml  quickdesk-android.yml  quickdesk-vdd.yml  quickdesk-windows.yml
QuickDesk/: CMakeLists.txt  Main.qml  main.cpp  qml.qrc
QuickDesk/base/: CMakeLists.txt  def.h  qaesencryption.cpp  qaesencryption.h  singleton.h  system.cpp  system.h  util.cpp  util.h  xcheck.h
QuickDesk/infra/: CMakeLists.txt
QuickDesk/infra/autostart/: autostartmanager.cpp  autostartmanager.h  autostartmanagerplatform.h  autostartmanagerplatformmac.mm  autostartmanagerplatformwin.cpp
QuickDesk/infra/db/: dbbase.cpp  dbbase.h
QuickDesk/infra/env/: applicationcontext.cpp  applicationcontext.h
QuickDesk/infra/http/: httprequest.cpp  httprequest.h
QuickDesk/infra/log/: log.cpp  log.h
SignalingServer/: .env  .env.example  Dockerfile  README.md  deploy-build.sh  deploy-offline.sh  deploy-pull.sh  deploy.sh  docker-compose.yml  go.mod  go.sum  start.sh
SignalingServer/docs/: user-api-docs.md
WebClient/: index.html  package.json  remote.html  vite.config.js
cmake/: quickdesk-remoting.cmake  rapidocr.cmake  spdlog.cmake
docs/: MCP接入指南.md  TURN服务器部署.md  demo-scenarios.md  mcp-integration.md  signaling-server-deployment.md  turn-server-deployment.md  信令服务器部署.md  典型场景Demo.md
quickdesk-android/: README.md  pubspec.yaml
quickdesk-virtual-display/: .gitignore
scripts/: build_qd_mac.sh  build_vdd_win.bat  gen_vdd_cat.bat  package_qd_mac.sh  publish_qd_mac.sh  publish_qd_win.bat
(+259 files in other folders)
